--- a/yingshi/src/main/resources/application.properties
+++ b/yingshi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/yingshi?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://111.230.11.92:3306/yingshi?characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
